# orderbook

./: README.md  app.py  order_book.db  pyproject.toml  requirements.txt  test_order_book.py
api/: routes.py  validators.py
database/: __init__.py  db.py  order_book.py
models/: __init__.py  commodity.py  customer.py  order.py  trade.py
ui/: __init__.py  routes.py
ui/static/css/: styles.css
ui/static/js/: main.js
ui/templates/: index.html
